# odata-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RESOURCES.md
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/e2e/src/: main.rs  test_model.rs
examples/edm/src/: main.rs
learning/: ODATA_SAMPLES.md  postman.json
odata-client/: Cargo.toml
odata-client/src/: error.rs  lib.rs
odata-common/: Cargo.toml
odata-common/src/: lib.rs
odata-edm/: Cargo.toml
odata-edm/json_schema/: schema.json
odata-edm/src/: edm.rs  lib.rs  tests.rs
odata-edm/test_data/: produced_edm.xml
odata-edm/xsd/: edm.xsd
odata-model/: Cargo.toml
odata-model/src/: error.rs  lib.rs  model.rs  resource.rs  tests.rs
odata-parser/: Cargo.toml
odata-parser/src/: lib.rs
odata-sql-helpers/: Cargo.toml
odata-sql-helpers/src/: lib.rs  reflect.rs
odata-sql-helpers/src/tests/: mod.rs  test_model.rs
odata-web-helpers/: Cargo.toml
odata-web-helpers/src/: lib.rs  response.rs
sample-client/: Cargo.toml
sample-client/src/: main.rs
sample-server/: Cargo.toml
sample-server/src/: main.rs
