[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = {version="0.12", features=["sqlx-postgres", "mock"]}
quick-xml={version = "0.31", features=["serialize"]}
serde={version = "1.0", features=["derive"]}
serde_json = "1"
tokio = { version = "1", features=["full"] }
anyhow = "1"
axum = "0.6"

# local dependencies
odata-model = { path = "../odata-model" }
odata-edm = { path = "../odata-edm" }
odata-sql-helpers = { path = "../odata-sql-helpers" }
odata-parser = { path = "../odata-parser" }
odata-web-helpers = { path = "../odata-web-helpers" }


[[example]]
name = "edm"
path = "edm/src/main.rs"

[[example]]
name = "e2e"
path = "e2e/src/main.rs"


