[package]
name = "odata-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# local dependencies

odata-model = { path = "../odata-model" }