[package]
name = "odata-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.4"
percent-encoding = "2.3"
thiserror = "1.0"
rust_decimal = "1.32"
http = "0.2"

[dev-dependencies]
rust_decimal_macros = "1.32"
