[package]
name = "odata-sql-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4"
sea-orm = "0.12"
heck = "0.4"
serde_json = "1"

# local dependencies
odata-model = { path = "../odata-model" }