[package]
name = "odata-web-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4"
axum = "0.6"
http = "0.2"
async-trait = "0.1"

# local dependencies
odata-model = { path = "../odata-model" }