[package]
name = "sample-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
axum = "0.6"
serde_json = "1"
odata-parser = { path = "../odata-parser" }
odata-web-helpers = { path = "../odata-web-helpers" }